--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,5 +11,18 @@ body {
 }
 * {
   box-sizing: border-box;
-  
+  scroll-behavior: smooth;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+::-webkit-scrollbar-track {
+  background-color: #fff;
+  box-shadow: inset 0 0 5px 0 rgba(0, 0, 0, 0.5);
+}
+::-webkit-scrollbar-thumb {
+  background-color: #3772FF;
+  border-radius: 20px;
+  box-shadow: inset 0 0 5px 0 rgba(0, 0, 0, 0.2);
 }
